ISIS-2877: fixes prev. commit, also some comment